--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'com.amazonaws:aws-android-sdk-s3:2.22.+'
+    implementation 'com.amplifyframework:aws-auth-cognito:1.35.4'
+    implementation 'com.amplifyframework:aws-storage-s3:1.35.4'
+    implementation 'com.amplifyframework:core:1.35.4'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
